lesson2/css/multipleObjects.css
:root{
--primetext: #2c3e50;
--primeaccent: #D98D68;
--bgsecond: #E0A6AA;
--secondaccent: #e2c275;
--primebg: #E6DBC9;
}

html{
    height: 100dvh;
    width: 100dvw;
    margin: 0;
    padding: 0;
}
body{
    margin: 0;
    width: 100dvw;
    height: 100dvh;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    
    background-color: var(--primebg);
    color: var(--primetext);
}
header {
    
    
    min-height: 10dvh;
    max-height: 25dvh ;
    width: 100dvw;
    background-color: var(--bgsecond);
    justify-items: center;
    box-shadow: 0 0 10px var(--primetext);

}

.headitem {
    margin: 1em;
}

.maincont {
    height: 100dvh;
    display: grid;
    gap: 1em;
    
    grid-template-areas:
        'head'
        'art1'
        'art2'
        'foot';
}

.head {
    grid-area: head;
}

.article1 {
    grid-area: art1;
    height: 45dvh;
}

.article2 {
    grid-area: art2;
    height: 5dvh;
}

.foot {
    grid-area: foot;
}
.boxcont{
    position: relative;
    justify-items: center;
}

.moodcont{
    background-color: var(--primebg);
    justify-content: center;
    position: absolute;
    height: 60dvh;
    width: 90dvw;
    padding: 1em 1em;
    background-color: var(--primebg);
    display: grid;
    grid-template-areas: 'm1 m2 m3';
    gap: 1em;
}
.moodcont img{
    z-index: 1;
    width: 25%;
    height: auto;
    
}
.moodcont button{
    padding: 1em 0;
    border-radius: 3em;
    
}
.moodcont button:hover{
    background-color: var(--primeaccent);
}
.moodcont button:active{
    background-color: var(--secondaccent);
}
.mood1{
    grid-area: m1;
    
}
.mood2 {
    grid-area: m2;
}
.mood3 {
    grid-area: m3;
}
.detail{
    
    position: absolute;
    height: 100%;
    width: 95dvw;
    justify-items: center;
    z-index: -1;
    background-color: var(--primebg);
}
.detailForm{
    justify-content: end;
    align-items: stretch;
    display: flex;
    flex-direction: column;
    min-width:40dvw;
    min-height: 50dvh;
    
}
.detailUserText{
    font-size: 150%;
    border: 3px solid var(--primeaccent);
    background-color: var(--primebg);
    color: var(--primetext);
    padding: 1em 1em;
    flex-grow: 1;
    border-radius: 20px;
}
.textbtn{
    background-color: var(--secondaccent);
    box-shadow: 1px 1px 3px var(--primetext);
    align-self: center;
    width: 10em;
    height: 5em;
    margin-top: 1em;
}

.foot{
    margin-top: auto;
    width: 100dvw;
    height: 5dvh;
    background-color: var(--secondaccent);
}
.footcont{
    display: flex;
    justify-content: end;
    
}
.foot a{
    align-self: center;
    padding: 0 1em;
    text-decoration: none;
    color: none;
}
.foot p {
    padding: 0 1em;
    align-self: center;
}
.foot img{
    width: 2em;
    height: auto;

}

@media screen and (max-width: 800px) {
    .maincont{
        height: 100dvh;
        display: grid;
        grid-template-rows: 25% 30% 25%;
    }
    .head{
        font-size: 90%;
    }
    .moodcont img{
        z-index: 0;
    }
    .footcont{
        height: auto;
        
    }
    .mobile{
        
        font-size: 90%;
    }
}

